# StankinPractise

./: CMakeLists.txt  Client.cpp  Client_main.cpp  README.md  Server_main.cpp
Client/: Authorization.cpp  Client.cpp  Client.h  Client_main.cpp  Utils.cpp  Utils.h
Common/: Packets.cpp  Packets.h  Packets.hpp  RoomsHandler.cpp  RoomsHandler.h  RoomsHandler.hpp
Server/: Server.cpp  Server.h  Server_main.cpp  ThreadPool.cpp
